fixed z-index to get the close circle to only show up under the header

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -106,6 +106,8 @@ p {
     padding-bottom: 0;
     margin: 0;
     background-color: #707070;
+    z-index: 10;
+    
 }
 .modal-header {
     border-bottom: none;
@@ -133,13 +135,11 @@ p {
     border-radius: 1rem;
     /* border-color: #707070 !important;
     background-color: #707070; */
-    border-color: #a1a1a1;
-    background-color: #a1a1a1 ;
-    color: #FFFFFF;
+    border-color: #D7D7D7;
+    background-color: #D7D7D7 ;
     font-size: 0.875rem;
     width: 2rem;
     height: 2rem;
-    cursor: default !important;
     padding: 0;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -164,6 +164,8 @@ p {
     position: fixed;
     top: 30px;
     right: 30px;
+    z-index: 10;
+    cursor: pointer;
 }
 .special-modal {
     z-index: 5000;
